--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
         <nav class="navbar">
 
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="servicii.html">Servicii</a>
             <a href="portofoliu.html">Portofoliu</a>
             <a href="contact.html">Contact</a>
