--- a/portofoliu.html
+++ b/portofoliu.html
@@ -116,7 +116,7 @@
 
         <ul class="list">
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
             <li><a href="portofoliu.html">Portofoliu</a></li>
 
