--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 
         <ul class="list">
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
             <li><a href="portofoliu.html">Portofoliu</a></li>
 
