--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="description" content="Bine ați venit pe site-ul lui Florin P. S.! Află mai multe despre serviciile oferite, proiectele realizate și contactați-mă pentru colaborări.">
+
+    <title>Web design-Home</title>
 
     <link rel="stylesheet" href="style.css/home.css">
 
