--- a/servicii.html
+++ b/servicii.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicii</title>
+    <title>Florin P. S. - Servicii</title>
 
+    <meta name="description" content="Descoperiți gama de servicii oferite de mine, inclusiv dezvoltare web, design grafic și consultanță IT. Contactați-mă pentru mai multe detalii.">
+
+    
     <link rel="stylesheet" href="style.css/servicii.css">
 
     <link rel="stylesheet" href="style.css/nav-footer.css">
