--- a/portofoliu.html
+++ b/portofoliu.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofoliu</title>
+    <title>Florin P. S. - Portofoliu</title>
+
+    <meta name="description" content="Află mai multe despre lucrarile mele, experiența, proiectele realizate și pasiunea pentru web design.">
+
 
     <link rel="stylesheet" href="style.css/portofoliu.css">
 
