--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Florin P. S. -Contact</title>
+
+    <meta name="description" content="Contactați-ma. pentru orice întrebări sau colaborări. Găsiți informațiile de contact și formularul de contact aici.">
+
 
     <link rel="stylesheet" href="style.css/contact.css">
 
