--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <main class="skills">
 
-        <img src="LOGO1.png" alt="LOGO1" class="logo-skill">
+        <img src="LOGO1.png" alt="LOGO" class="logo-skill">
         <div class="title">
 
             <h3>My Skills</h3>
@@ -169,59 +169,59 @@
 
         <div class="img-gallery">
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph1.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph1.jpg" alt="coperta-carte">
                 <div class="overlay">PHOTOSHOP - poster</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph2.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph2.jpg" alt="manipulare-jump">
                 <div class="overlay">PHOTOSHOP - poster</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/asignment girafa.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/asignment girafa.jpg" alt="girafa-vector">
                 <div class="overlay">ILUSTRATOR - ilustratie</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph6.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph6.jpg" alt="coperta-photoshop">
                 <div class="overlay">PHOTOSHOP - poster</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph4.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph4.jpg" alt="poster-photoshop">
                 <div class="overlay">PHOTOSHOP - poster</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph5.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph5.jpg" alt="poster-photoshop">
                 <div class="overlay">PHOTOSHOP - poster</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/artemis.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/artemis.jpg" alt="logo-artemis">
                 <div class="overlay">LOGO Artemis</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/nails.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/nails.jpg" alt="logo-nails">
                 <div class="overlay">LOGO CH nails</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/smart-green.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/smart-green.jpg" alt="logo-smart-green">
                 <div class="overlay">LOGO SmartGreen</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/agro2.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/agro2.jpg" alt="logo-agro2">
                 <div class="overlay">LOGO Agro</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/agro1.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/agro1.jpg" alt="logo-agro1">
                 <div class="overlay">LOGO Agro</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/photoshop/ph3.jpg" alt="">
+                <img src="poze-portofoliu/photoshop/ph3.jpg" alt="poster">
                 <div class="overlay">PHOTOSHOP manipulation</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/tmat.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/tmat.jpg" alt="logo-tmat">
                 <div class="overlay">LOGO Tmat</div>
             </div>
             <div class="img-container">
-                <img src="poze-portofoliu/ilustrator/tmat2.jpg" alt="">
+                <img src="poze-portofoliu/ilustrator/tmat2.jpg" alt="logo-tmat2">
                 <div class="overlay">LOGO Tmat</div>
             </div>
         </div>
