--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bine ați venit pe site-ul lui Florin P. S.! Află mai multe despre serviciile oferite, proiectele realizate și contactați-mă pentru colaborări.">
-<meta name="keywords" content="dezvoltare web, design grafic, consultanță IT, proiecte personalizate, soluții inovative, Florin P. S.">
+<meta name="keywords" content="dezvoltare web, design grafic, proiecte personalizate, soluții inovative, Florin P. S., experiențe digitale unice">
 
     
     <title>Web design-Home</title>
@@ -54,7 +54,7 @@
             <div class="home-content">
                 <h1>Salut, eu sunt <span>Florin P.S.</span></h1>
 
-                <h2><br>Designer grafic pasionat de crearea experiențelor digitale unice</h2>
+                <h2><br>Designer grafic pasionat de dezvoltare web, crearea experiențelor digitale unice si proiecte personalizate</h2>
 
                 <h3 class="text-animation">Specializat în <span></span></h3>
 
