--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
     <meta name="description" content="Contactați-ma. pentru orice întrebări sau colaborări. Găsiți informațiile de contact și formularul de contact aici.">
 
+    <meta name="keywords" content="contact, Florin P. S., colaborări, întrebări, formular de contact">
 
     <link rel="stylesheet" href="style.css/contact.css">
 
@@ -75,6 +76,8 @@
                     <ul>
                         <li><a href=""><i class="bi bi-geo-alt-fill"></i></a> Jud. Iasi, Pascani</li>
                     </ul>
+                  <p>Pentru orice <strong>întrebări</strong> sau <strong>colaborări</strong>, vă rugăm să ne contactați folosind informațiile oferite sau completând formularul de contact.</p>
+
                 </div>
 
 
