--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                     <ul>
                         <li><a href=""><i class="bi bi-geo-alt-fill"></i></a> Jud. Iasi, Pascani</li>
                     </ul>
-                  <p>Pentru orice <strong>întrebări</strong> sau <strong>colaborări</strong>, vă rugăm să ne contactați folosind informațiile oferite sau completând formularul de contact.</p>
+                  <p>Pentru orice întrebări despre<strong>web design</strong> sau <strong>web development</strong>, vă rugăm să ne contactați folosind informațiile oferite sau completând formularul de contact.</p>
 
                 </div>
 
