--- a/servicii.html
+++ b/servicii.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florin P. S. - Servicii</title>
+    <title>Florin P. S. - Servicii dezvoltare web si web design</title>
 
     <meta name="description" content="Descoperiți gama de servicii oferite de mine, inclusiv dezvoltare web, design grafic și consultanță IT. Contactați-mă pentru mai multe detalii.">
 
