--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florin P. S. -Contact</title>
+    <title>Florin P. S. -Contact servicii web design</title>
 
-    <meta name="description" content="Contactați-ma. pentru orice întrebări sau colaborări. Găsiți informațiile de contact și formularul de contact aici.">
+    <meta name="description" content="Contactați-ma. pentru orice întrebări sau colaborări in branding, web design. Găsiți informațiile de contact și formularul de contact aici.">
 
     <meta name="keywords" content="contact, Florin P. S., colaborări, întrebări, formular de contact">
 
@@ -76,8 +76,14 @@
                     <ul>
                         <li><a href=""><i class="bi bi-geo-alt-fill"></i></a> Jud. Iasi, Pascani</li>
                     </ul>
-                  <p>Pentru orice întrebări despre<strong>web design</strong> sau <strong>web development</strong>, vă rugăm să ne contactați folosind informațiile oferite sau completând formularul de contact.</p>
 
+                    
+                    <ul>
+                  <p>Pentru orice întrebări despre<strong>web design</strong> sau <strong>web development</strong>, vă rugăm să ne contactați folosind informațiile oferite sau completând formularul de contact.</p>
+                    </ul>
+
+
+                    
                 </div>
 
 
@@ -85,7 +91,7 @@
             </div>
 
             <div class="submit-form">
-                <h4 class="right-text">Contacteaza-ma!</h4>
+                           <h2 class="right-text">Spune-mi proiectul tau de UI/UX design</h2>
                 <form action="">
                     <div class="input-box">
                         <label for="name"></label>
